# rCandle

./: .gitignore  BUILD_FIX_SESSION.md  BUILD_STATUS.md  COMMIT_SUMMARY_UNLOCK_FEATURES.md  COMPILATION_FIX_SUMMARY.md  CONNECTION_MANAGER_FIX.md  Cargo.toml  DEBUG_COMMAND_SENDING.md  FIXES_SUMMARY.md  GITHUB_RELEASE_SUMMARY.md  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  INCOMPLETE_TASKS_PROGRESS.md  INTEGRATION_TESTING_SUMMARY.md  ISSUE_ANALYSIS.md  LOCK_STATUS_INDICATOR.md  NEXT_STEPS.md  PHASE4_SUMMARY.md  PHASE6_WEEK13_PROGRESS.md  PHASE8_BACKEND_INTEGRATION.md  PHASE8_IMPLEMENTATION.md  PHASE8_UI_INTEGRATION.md  PHASE9_COMPLETION_SUMMARY.md  PROGRESS.md  PROJECT_STATUS.md  README.md  README_UPDATE_SUMMARY.md  RELEASE_NOTES_v0.1.0-alpha.md  REPOSITORY_ANALYSIS.md  RESPONSE_LOGGING_FEATURE.md  SESSION_SUMMARY.md  TASK_COMPLETION_SUMMARY.md  TODO.md  TOKIO_RUNTIME_FIX.md  TOOLING.md  UI_BLOCKER_RESOLUTION.md  UI_FIX_ATTEMPT.md  UI_INTERACTION_FIX.md  UNLOCK_FEATURE.md  WEEK12_DAY5_SUMMARY.md  (+10 more)
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  task.md
.github/workflows/: ci.yml
.specify/: ARCHITECTURE.md  DEPENDENCIES.md  FILE_STRUCTURE.md  GRBL_RESOURCES.md  IMPLEMENTATION_PLAN.md  MIGRATION_GUIDE.md  PHASE1_CHECKLIST.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  SPECIFICATION.md  START_HERE.md  TASKS.md  UPDATE_LOG.md
assets/gcode/: testbox.ncg
docs/: CONNECTION_MODULE.md  FAQ.md  INSTALLATION.md  KEYBOARD_SHORTCUTS.md  STATE_MANAGEMENT.md  TROUBLESHOOTING.md  USER_GUIDE.md
examples/: connection_manager.rs  minimal_ui_test.rs  parse_gcode.rs  serial_connection.rs  state_integration.rs  telnet_connection.rs  websocket_connection.rs
src/: lib.rs  main.rs
src/connection/: manager.rs  mod.rs  serial.rs  telnet.rs  traits.rs  websocket.rs
src/grbl/: commands.rs  mod.rs  overrides.rs  queue.rs  realtime.rs  responses.rs
src/heightmap/: mod.rs
src/parser/: mod.rs  parser.rs  preprocessor.rs  segment.rs  tokenizer.rs  types.rs
src/renderer/: camera.rs  grid.rs  mod.rs  renderer.rs  toolpath.rs  view_presets.rs
src/renderer/shaders/: line.wgsl
src/script/: api.rs  executor.rs  mod.rs  user_commands.rs
src/settings/: mod.rs
src/state/: app.rs  events.rs  machine.rs  mod.rs  program.rs  updater.rs
src/ui/: app.rs  mod.rs  panels.rs  widgets.rs
src/utils/: error.rs  logging.rs  mod.rs
tests/: connection_integration.rs
tests/common/: mock_grbl.rs  mod.rs
